--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "bulma": "^0.9.0",
+    "autoprefixer": "^10.3.6",
     "gatsby": "^4.0.0-zz-next.1",
     "gatsby-plugin-image": "^2.0.0-zz-next.1",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
     "gatsby-plugin-netlify-cms": "^6.0.0-zz-next.1",
+    "gatsby-plugin-postcss": "^5.0.0-zz-next.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
-    "gatsby-plugin-sass": "^5.0.0-zz-next.1",
     "gatsby-plugin-sharp": "^4.0.0-zz-next.1",
     "gatsby-remark-copy-linked-files": "^5.0.0-zz-next.1",
     "gatsby-remark-images": "^6.0.0-zz-next.1",
@@ -25,10 +25,12 @@
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
     "node-sass": "^4.14.0",
+    "postcss": "^8.3.8",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "tailwindcss": "^2.2.16",
     "uuid": "^7.0.0"
   },
   "keywords": [
