--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@types/react": "^17.0.26",
+    "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.3.6",
     "gatsby": "^4.0.0-zz-next.1",
     "gatsby-plugin-image": "^2.0.0-zz-next.1",
@@ -13,6 +15,7 @@
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
     "gatsby-plugin-sharp": "^4.0.0-zz-next.1",
+    "gatsby-plugin-typescript": "4.0.0-zz-next.1",
     "gatsby-remark-copy-linked-files": "^5.0.0-zz-next.1",
     "gatsby-remark-images": "^6.0.0-zz-next.1",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -44,7 +47,7 @@
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.(j|t)s}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
