--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.3.6",
     "gatsby": "^4.0.0-zz-next.1",
+    "gatsby-background-image": "^1.5.3",
     "gatsby-plugin-image": "^2.0.0-zz-next.1",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
     "gatsby-plugin-netlify-cms": "^6.0.0-zz-next.1",
