--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,6 +39,7 @@ collections:
           - {label: Image, name: image, widget: image}
           - {label: Heading, name: heading, widget: string}
           - {label: Subheading, name: subheading, widget: string}
+          - {label: Hero, name: hero, widget: object, fields: [{label: Background, name: image, widget: image}, {label: Text, name: text, widget: text}, {label: Button, name: button, widget: object, fields: [{label: Text, name: text, widget: text}, {label: Href, name: href, widget: text}]}]}
           - {label: Mainpitch, name: mainpitch, widget: object, fields: [{label: Title, name: title, widget: string}, {label: Description, name: description, widget: text}]}
           - {label: Description, name: description, widget: string}
           - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
